--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - 24678:24678
     stdin_open: true
     volumes:
-      - ./personal_gpt:/code
+      - .:/code
       - /code/node_modules
     tty: true
     command: npm run dev
